--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 asgiref==3.8.1
 dj-database-url==2.3.0
-Django==5.1.3
 dj-static==0.0.6
+Django==5.1.3
+django-environ==0.11.2
+django-extensions==4.1
+django-heroku==0.3.1
 gunicorn==23.0.0
 packaging==24.2
 psycopg2==2.9.10
+psycopg2-binary==2.9.9
+python-dateutil==2.9.0
+python-decouple==3.8
+python-ipware==3.0.0
+six==1.17.0
 sqlparse==0.5.2
+static3==0.7.0
 typing_extensions==4.12.2
 tzdata==2024.2
 whitenoise==6.8.2
-python-decouple==3.8
-django-environ==0.11.2
-psycopg2-binary==2.9.9
-python-dateutil==2.9.0
